Code cleanup. Prepping for Continous deployment to Live site

--- a/src/USSEScoreboard/project.json
+++ b/src/USSEScoreboard/project.json
@@ -85,6 +85,7 @@
       "Views",
       "Areas/**/Views",
       "appsettings.json",
+      //"appsettings.production.json",
       "web.config"
     ]
   },
