Activated email service

--- a/src/USSEScoreboard/project.json
+++ b/src/USSEScoreboard/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "userSecretsId": "aspnet-USSEScoreboard-39857950-6802-42af-a79d-98d560a1ea2f",
 
   "dependencies": {
@@ -42,7 +42,8 @@
     "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
       "version": "1.0.0-preview2-final",
       "type": "build"
-    }
+    },
+    "SendGrid.NetCore": "1.0.0-rtm-00002"
   },
 
   "tools": {
