--- a/Website/USSEScoreboard/Properties/launchSettings.json
+++ b/Website/USSEScoreboard/Properties/launchSettings.json
@@ -3,8 +3,11 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:59840/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44319/",
+      "sslPort": 44319
+    },
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
     }
   },
   "profiles": {
