--- a/Website/USSEScoreboard/appsettings.json
+++ b/Website/USSEScoreboard/appsettings.json
@@ -9,5 +9,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AzureAd": {
+    "ClientId": "",
+    "Tenant": "microsoft.onmicrosoft.com",
+    "AadInstance": "https://login.microsoftonline.com/{0}/v2.0", // This is the public instance of Azure AD
+    "PostLogoutRedirectUri": "https://localhost:44319/"
   }
 }
