--- a/Website/USSEScoreboard/appsettings.json
+++ b/Website/USSEScoreboard/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-USSEScoreboard-39857950-6802-42af-a79d-98d560a1ea2f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-USSEScoreboard-DEV-39857950-6802-42af-a79d-98d560a1ea2f;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -13,7 +13,7 @@
   "AzureAd": {
     "ClientId": "",
     "Tenant": "microsoft.onmicrosoft.com",
-    "AadInstance": "https://login.microsoftonline.com/{0}/v2.0", // This is the public instance of Azure AD
+    "AadInstance": "https://login.microsoftonline.com/{0}/", // This is the public instance of Azure AD
     "PostLogoutRedirectUri": "https://localhost:44319/"
   }
 }
