--- a/Website/USSEScoreboard/USSEScoreboard.csproj
+++ b/Website/USSEScoreboard/USSEScoreboard.csproj
@@ -27,4 +27,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
