--- a/Website/USSEScoreboard/USSEScoreboard.csproj
+++ b/Website/USSEScoreboard/USSEScoreboard.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Sendgrid" Version="9.7.0" />
   </ItemGroup>
 
