Namespace change continued

--- a/Solution/Scoreboard.Website/Properties/launchSettings.json
+++ b/Solution/Scoreboard.Website/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "USSEScoreboard": {
+    "Scoreboard.Website": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
