--- a/Solution/Scoreboard.Functions/Scoreboard.Functions.csproj
+++ b/Solution/Scoreboard.Functions/Scoreboard.Functions.csproj
@@ -3,13 +3,17 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Scoreboard.Common\Scoreboard.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
