--- a/Solution/Scoreboard.Website/Scoreboard.Website.csproj
+++ b/Solution/Scoreboard.Website/Scoreboard.Website.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\Scoreboard.Common\Scoreboard.Common.csproj" />
   </ItemGroup>
 
 </Project>
