--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet build Solution\Scoreboard.Website --configuration $(buildConfiguration)
+  displayName: 'dotnet build Scoreboard.website $(buildConfiguration)'
