--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,10 @@ variables:
 steps:
 - script: dotnet build ./Solution/Scoreboard.Website --configuration $(buildConfiguration)
   displayName: 'dotnet build Scoreboard.website $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
