--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,12 @@ steps:
   displayName: 'dotnet build Scoreboard.website $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
+  displayName: 'publishing to Zip Archive for deployment'
   inputs:
     command: publish
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publishing Artifacts'
